src/test/deca/test_lex/valid/simple_lex.deca
// Description:
//    tests de programme lexicalement correct.
//
// Resultats:
//    Ligne 11 : Erreur de syntaxe.
//    test_lex ne doit pas donner d'erreur.
//    parseur doit donner d'erreur puisque plusieurs blocs main 
//
// Historique:
//    cree le 01/01/2022

idf _autre_idf
{
}
(
)
// un commentaire.idf _autre_idf
{
}
(
)
// un commentaire.
