src/test/deca/test_lex/invalid/invalid/parantheses_autour_statement.deca
// Description:
//    Des paranthèses autour d'un statement
//
//    [Syntaxe], Grammaire concrete, p59.
//    Un statement ne peut pas commencer par des paranthèses.
//
// Resultats:
//    Erreur de parseur, 13:5
//
// Historique:
//    cree le 05/01/2022

{
    (println("Hello, world"));
}